--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -15,8 +15,8 @@
             <nav class="navbar">
                 <a href="#">Home</a>
                 <a href="products">Products</a>
-                <a href="#">Add to Cart</a>
-                <a href="#">Order List</a>
+                <a href="edit_cart">Add to Cart</a>
+                <a href="view_cart">Order List</a>
             </nav>
             <form action="#" class="search-bar">
                 <input type="text" placeholder="Search...">
