--- a/template/edit_cart.html
+++ b/template/edit_cart.html
@@ -13,6 +13,10 @@
             color: #8B4513;
             text-align: center;
         }
+        h2 {
+            color: #8B4513;
+            text-align: center;
+        }
         table {
             width: 100%;
             border-collapse: collapse;
@@ -67,9 +71,10 @@
     </style>
 </head>
 <body>
-    <h1>Edit Cart</h1>
+    <h1>Add To Cart</h1>
+    <h2>Review Cart</h2>
     
-    <form method="POST" action="{{ url_for('edit_cart') }}">
+    <form method="POST" action="{{ url_for('edit_cart_route') }}">
         <table>
             <tr>
                 <th>Product</th>
@@ -81,6 +86,8 @@
             </tr>
             {% for item in cart_items %}
                 <tr>
+                    <!-- Include the item id as a hidden input field in the form -->
+                    <input type="hidden" name="{{ item.id }}_id" value="{{ item.id }}">
                     <td>{{ item.product_name }}</td>
                     <td>
                         <select name="{{ item.id }}_size">
@@ -105,7 +112,7 @@
         
         <div>
             <button type="submit" style="height: 45px;">Update Cart</button>
-            <a href="{{ url_for('add_to_cart') }}" style="background-color: #ffd4ac; color: black;">Cart</a>
+            <a href="{{ url_for('view_cart_route') }}" style="background-color: #ffd4ac; color: black;">Cart</a>
         </div>
     </form>
 </body>
